# goit-pythonweb-hw-012

./: .coverage  Makefile  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  test.db
docs/: api.rst  conf.py  conf.rst  database.rst
docs/_build/doctrees/: api.doctree  conf.doctree  database.doctree  environment.pickle  index.doctree  services.doctree
docs/_build/html/: .buildinfo  api.html  conf.html  database.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  services.html
docs/_build/html/_sources/: index.rst.txt  services.rst.txt
src/: schemas.py
src/alembic/versions/: 89745f8adb24_.py  a531e6a86a9f_.py  b1027d50f49f_.py  d5dcd439b86c_.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/templates/: reset_password.html
tests/: conftest.py
tests/api_test/: api_auth_test.py  api_contacts_test.py  api_users_test.py  utils_test.py
tests/database_test/: models.py
tests/repository_test/: repository_contacts_test.py  repository_users_test.py
tests/services_test/: auth_test.py  email_test.py  service_auth_test.py  service_contacts_test.py  upload_file_test.py  users_test.py
